2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c: Unconditionally compile for MBCS.
	* sed/mbcs.c: Unconditionally compile for MBCS.
	* sed/sed.h: Unconditionally compile for MBCS.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* basicdefs.h: Enjoy gnulib's headers.
	* sed/compile.c: Likewise.
	* sed/execute.c: Likewise.
	* sed/regexp.c: Likewise.
	* sed/sed.c: Likewise.
	* sed/sed.h: Likewise.
	* sed/utils.c: Likewise.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Remove.
	* bootstrap.sh: Remove.
	* configure.ac: Do not create bootstrap.sh.
	* basicdefs.h: Remove guards.
	* pcre/pcre.h [BOOTSTRAP]: Remove guards.
	* sed/execute.c [BOOTSTRAP]: Remove guards.
	* sed/sed.c [BOOTSTRAP]: Remove guards.
	* sed/sed.h [BOOTSTRAP]: Remove guards.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* execute.c (open_next_file): Save/restore file creation context.

2010-11-03  Eric Blake  <eblake@redhat.com>

	* basicdefs.h (ISDIGIT): Avoid compiler warning on cygwin.
	* sed/compile.c (normalize_text): Avoid undefined behavior.

	* sed/sed.c (includes): Supply missing header.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* gnulib: Update.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed.x: Document address behavior across input files.
	* doc/sed.1: Regenerate.

2012-02-13  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Test whether fopen("foo", "rt") works.
	* sed/compile.c: Do not open scripts with "rt" mode if it doesn't.
	* sed/sed.c: Never open input files with "rt" mode.

2012-02-05  Paolo Bonzini  <bonzini@gnu.org>
            Jim Hill  <gjthill@gmail.com>

	* autoboot.conf: Change getline to getdelim.
	* doc/sed-in.texi: Document -z/--null-data.
	* doc/sed.texi: Regenerate.
	* doc/sed.1: Regenerate.
	* sed/execute.c: Change '\n' to buffer_delimiter.
	* sed/sed.c: Add support for -z/--null-data.
	* sed/sed.h: Add buffer_delimiter.
	* sed/utils.c: Change ck_getline to ck_getdelim.