@@ -233,8 +233,8 @@ match_regex(regex, buf, buflen, buf_start_offset, regarray, regsize)
     regex_last = regex;
 
 #ifdef REG_PERL
-  regmatch[0].rm_so = CAST(int)buf_start_offset;
-  regmatch[0].rm_eo = CAST(int)buflen;
+  regmatch[0].rm_so = (int)buf_start_offset;
+  regmatch[0].rm_eo = (int)buflen;
   ret = regexec (&regex->pattern, buf, regsize, regmatch, REG_STARTEND);
 
   if (regsize)
